force-app/main/default/objects/Election__c/Election__c.object-meta.xml
<CustomObject>
    <label>Election</label>
    <nameField>
        <label>Election Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>