force-app/main/default/objects/Election__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12-18</fullName>
            </value>
            <value>
                <fullName>19-40</fullName>
            </value>
            <value>
                <fullName>41-50</fullName>
            </value>
            <value>
                <fullName>51-60</fullName>
            </value>
            <value>
                <fullName>61-80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>