force-app/main/default/objects/Election__c/fields/Favorite_Color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Color__c</fullName>
    <label>Favorite Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Pink</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>