force-app/main/default/objects/Election__c/fields/testing__c.field-meta.xml
<CustomField>
    <fullName>testing__c</fullName>
    <label>testing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>