force-app/main/default/objects/Election__c/recordTypes/Elections_RT.recordType-meta.xml
<RecordType>
    <fullName>Elections_RT</fullName>
    <active>true</active>
    <label>Elections RT</label>
</RecordType>