force-app/main/default/objects/Election__c/validationRules/If_Fullname_is_populated_then_require_BD.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Fullname_is_populated_then_require_BD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Full_Name__c)),
ISBLANK( Birthdate__c)
)</errorConditionFormula>
    <errorMessage>Birthdate is required when Fullname is populated</errorMessage>
</ValidationRule>